# cocode

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md
coco-cli/: Makefile  (+2 more)
coco-rs/app/runtime/: CLAUDE.md  Cargo.toml
coco-rs/app/runtime/src/: bootstrap.rs  lib.rs  process_runtime.rs  process_runtime.test.rs  project_services.rs  project_services.test.rs  workspace.rs
coco-rs/app/sdk-server/: CLAUDE.md  Cargo.toml
coco-rs/app/sdk-server/src/: app_server_transport.rs  dispatcher.rs  dispatcher.test.rs  event_renderer.rs  lib.rs  sidecar.rs  startup.rs  transport.rs
coco-rs/app/sdk-server/tests/: lifecycle_conformance.rs
coco-rs/app/server/: CLAUDE.md  Cargo.toml
coco-rs/app/server-client/: CLAUDE.md  Cargo.toml
coco-rs/app/server-client/src/: lib.rs  lib.test.rs  remote_demux.rs  remote_transport.rs
coco-rs/app/server-transport/: CLAUDE.md  Cargo.toml
coco-rs/app/server-transport/src/: lib.rs  lib.test.rs
coco-rs/app/server/src/: activity.rs  app_server.rs  app_server.test.rs  json_rpc_adapter.rs  json_rpc_adapter.test.rs  lib.rs  local_client_adapter.rs  local_client_adapter.test.rs  registration_policy.rs  registration_policy.test.rs  registry.rs  registry.test.rs  routing.test.rs  session_data.rs  session_data.test.rs  session_seq.rs  session_seq.test.rs
coco-rs/background-review/: Cargo.toml
coco-rs/background-review/src/: lib.rs  lock.rs  lock.test.rs
coco-rs/commands/: CLAUDE.md  Cargo.toml
coco-rs/commands/src/: implementations.rs  implementations.test.rs  lib.rs  lib.test.rs  skill_prompt_commands.test.rs
coco-rs/commands/src/handlers/: agents.rs  agents.test.rs  btw.rs  btw.test.rs  clear.rs  commit_prompt.rs  commit_push_pr.rs  compact.rs  diff.rs  diff.test.rs  feedback.rs  feedback.test.rs  help.rs  help.test.rs  hooks.rs  hooks.test.rs  init_prompt.rs  init_prompt.test.rs  keybindings.rs  keybindings.test.rs  lsp.rs  mcp.rs  mcp.test.rs  memory.rs  memory_dialog.rs  moa.rs  moa.test.rs  mod.rs  model.rs  model.test.rs  permissions.rs  plugin.rs  plugin.test.rs  prompt_command.rs  provider.rs  session.rs  skills.rs  skills.test.rs  stats.rs  vim.rs  (+7 more)
coco-rs/commands/src/prompts/: init_new.txt  init_old.txt  insights.txt  review.txt  statusline.txt  workflow.txt
coco-rs/core/goal-runtime/: CLAUDE.md  Cargo.toml
coco-rs/core/goal-runtime/src/: admission.rs  admission.test.rs  coordinator.rs  coordinator.test.rs  error.rs  evidence.rs  evidence.test.rs  gate.rs  gate.test.rs  handle.rs  handle.test.rs  lib.rs  materializer.rs  materializer.test.rs  port.rs  store.rs  store.test.rs  supervisor.rs  supervisor.test.rs  test_support.rs  verifier.rs
coco-rs/core/goals/: CLAUDE.md  Cargo.toml
coco-rs/core/goals/src/: budget.rs  budget.test.rs  command.rs  completion.rs  completion.test.rs  decision.rs  disposition.rs  disposition.test.rs  error.rs  evidence.rs  evidence.test.rs  id.rs  id.test.rs  lib.rs  plan.rs  plan.test.rs  reducer.rs  reducer.test.rs  snapshot.rs  snapshot.test.rs  status.rs  status.test.rs  test_support.rs  text.rs  text.test.rs
coco-rs/core/workflow/: CLAUDE.md  Cargo.toml
coco-rs/core/workflow-runtime/: CLAUDE.md  Cargo.toml
coco-rs/core/workflow-runtime/src/: convert.rs  convert.test.rs  engine.rs  engine.test.rs  error.rs  host.rs  host.test.rs  lib.rs  lib.test.rs  sandbox.rs  sandbox.test.rs
coco-rs/core/workflow/src/: lib.rs  lib.test.rs  meta.rs  source.rs
coco-rs/exec/exec-server/: CLAUDE.md  Cargo.toml
coco-rs/exec/exec-server/src/: client.rs  client_api.rs  client_recovery.rs  client_transport.rs  connection.rs  environment.rs  file_read.rs  file_system.rs  jsonrpc_lite.rs  lib.rs  local_file_system.rs  local_file_system.test.rs  local_process.rs  protocol.rs  remote_file_stream.rs  remote_file_system.rs  rpc.rs  runtime_paths.rs  server.rs
coco-rs/hub/connector/: CLAUDE.md  Cargo.toml
coco-rs/hub/connector/src/: lib.rs  lib.test.rs  worker.rs  worker.test.rs
coco-rs/hub/server/: CLAUDE.md  Cargo.toml
coco-rs/hub/server/src/: lib.rs  local_store.rs  local_store.test.rs  main.rs  main.test.rs  routes.rs  routes.test.rs  sqlite_store.rs  sqlite_store.test.rs
coco-rs/journey/: CLAUDE.md  Cargo.toml
coco-rs/journey/src/: lib.rs  snapshot.rs  snapshot.test.rs  timeline.rs  timeline.test.rs
coco-rs/services/session-trace/: CLAUDE.md  Cargo.toml
coco-rs/services/session-trace/src/: error.rs  event.rs  event.test.rs  lib.rs  replay.rs  replay.test.rs  writer.rs
coco-rs/skill-learn/: CLAUDE.md  Cargo.toml
coco-rs/skill-learn/src/: curator.rs  curator.test.rs  fence.rs  fence.test.rs  journal.rs  lib.rs  notice.rs  notice.test.rs  review.rs  review.test.rs  runtime.rs  runtime.test.rs  stamp.rs  stamp.test.rs
coco-rs/skill-learn/tests/: loop_e2e.rs
coco-rs/tests/cassette/: CLAUDE.md  Cargo.toml
coco-rs/tests/cassette/src/: cassette.rs  cassette.test.rs  lib.rs  player.rs  player.test.rs
coco-rs/tests/harness/: Cargo.toml
coco-rs/tests/harness/src/: lib.rs  model.rs  model.test.rs  normalize.rs  normalize.test.rs  recording.rs  recording.test.rs  registry.rs  registry.test.rs
coco-rs/tui-ui/: CLAUDE.md  Cargo.toml
coco-rs/tui-ui/benches/: render.rs
coco-rs/tui-ui/src/: bench_metrics.rs  bench_metrics.test.rs  color.rs  color.test.rs  constants.rs  display.rs  double_press.rs  lib.rs  paste.rs  paste.test.rs  style.rs  system_theme.rs  theme.rs  theme.test.rs
coco-rs/tui-ui/tests/: diff_golden.rs
coco-rs/utils/async-utils/: CLAUDE.md  Cargo.toml
coco-rs/utils/audio-capture/: CLAUDE.md  Cargo.toml
coco-rs/utils/coco-paths/: CLAUDE.md  Cargo.toml
coco-rs/utils/download/: CLAUDE.md  Cargo.toml
coco-rs/utils/jemalloc/: CLAUDE.md  Cargo.toml
coco-rs/utils/path-uri/: CLAUDE.md  Cargo.toml
coco-rs/vercel-ai/anthropic/: CLAUDE.md  Cargo.toml
coco-rs/vercel-ai/groq/: CLAUDE.md  Cargo.toml
coco-rs/voice/: CLAUDE.md  Cargo.toml
coco-rs/voice/src/: download.rs  engine.rs  error.rs  factory.rs  lib.rs  local.rs  models.rs  models.test.rs  remote.rs  session.rs
coco-rs/xtask/: Cargo.toml
coco-rs/xtask/src/: main.rs  markers.rs  markers.test.rs
(+2378 files in other folders)
