[package]
name = "coco-background-review"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-apply-patch.workspace = true
coco-utils-absolute-path.workspace = true
filetime = { workspace = true }
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
