[package]
name = "coco-commands"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-config.workspace = true
coco-context.workspace = true
coco-error.workspace = true
coco-lsp.workspace = true
coco-mcp.workspace = true
coco-types.workspace = true
coco-plugins.workspace = true
coco-secret-redact.workspace = true
coco-skills.workspace = true
coco-subagent.workspace = true
coco-utils-common.workspace = true
coco-utils-string.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "process", "fs"] }
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true
urlencoding.workspace = true

[dev-dependencies]
anyhow.workspace = true
# Dev-only: lets the /hooks test feed the config example this command prints
# through the real loader, instead of trusting that the two agree.
coco-hooks.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "process", "fs"] }
tempfile.workspace = true
