[package]
name = "coco-journey"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-skills.workspace = true
coco-memory.workspace = true
coco-maintenance.workspace = true
coco-utils-string.workspace = true
chrono = { workspace = true }
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile.workspace = true
