[package]
name = "coco-skill-learn"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-config.workspace = true
coco-tool-runtime.workspace = true
coco-skills.workspace = true
coco-frontmatter.workspace = true
coco-maintenance.workspace = true
coco-utils-absolute-path.workspace = true
coco-utils-common.workspace = true
coco-utils-string.workspace = true
coco-shell-parser.workspace = true
async-trait.workspace = true
chrono = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "fs", "macros"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile.workspace = true
tokio-util = { workspace = true }
