[package]
edition = "2021"
license.workspace = true
name = "coco-voice"
version.workspace = true

[lints]
workspace = true

[dependencies]
coco-config = { workspace = true }
coco-inference = { workspace = true }
coco-utils-audio = { workspace = true }
coco-utils-download = { workspace = true }

async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

whisper-rs = { workspace = true, optional = true }
hound = { workspace = true, optional = true }

# On macOS, build whisper.cpp with the Metal GPU backend (Apple-Silicon
# acceleration). This is a *target-specific dependency feature*, not a coco
# cargo feature: it applies automatically to macOS `local-voice` builds and is
# deliberately NOT reachable by `--all-features` on Linux (which has no Metal
# toolchain, so a feature flag would break the Linux gate). No code change is
# needed — `WhisperContextParameters::default()` uses whatever GPU backend was
# compiled in. (CoreML is intentionally left out: it also requires a second
# `*-encoder.mlmodelc` artifact download, deferred to a later phase.)
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { workspace = true, optional = true, features = ["metal"] }

[features]
default = []
# Enable the real cpal microphone backend in the capture dependency. Turned on
# by the shipped coco binary via app/cli's `voice` feature.
capture = ["coco-utils-audio/cpal"]
# Phase 2: on-device Whisper transcription. Pulls whisper.cpp (C++ toolchain)
# and hound (to decode captured WAV bytes back to f32 for the model).
local-voice = ["dep:whisper-rs", "dep:hound"]

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
