[package]
name = "coco-app-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coco_app_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
coco-commands.workspace = true
coco-config.workspace = true
coco-config-reload.workspace = true
coco-error.workspace = true
coco-git.workspace = true
coco-hooks.workspace = true
coco-lsp.workspace = true
coco-mcp.workspace = true
coco-output-styles.workspace = true
coco-paths.workspace = true
coco-plugins.workspace = true
coco-skills.workspace = true
coco-subagent.workspace = true
coco-types.workspace = true
coco-utils-common.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
