[package]
name = "coco-sdk-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-agent-host.workspace = true
coco-app-server.workspace = true
coco-app-server-transport.workspace = true
coco-error.workspace = true
coco-hub-connector.workspace = true
coco-types.workspace = true

async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
coco-app-runtime.workspace = true
coco-commands.workspace = true
coco-config.workspace = true
coco-messages.workspace = true
coco-session.workspace = true
coco-skills.workspace = true
coco-subagent.workspace = true
coco-tool-runtime.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
