[package]
name = "coco-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coco_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
coco-app-server.workspace = true
coco-app-server-transport.workspace = true
coco-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync"] }
tokio-tungstenite.workspace = true
futures = { workspace = true, features = ["std"] }

[dev-dependencies]
coco-app-server.workspace = true
coco-types.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync"] }
