[package]
name = "coco-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coco_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
coco-app-server-transport.workspace = true
coco-error.workspace = true
coco-types.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync"] }
tokio-tungstenite.workspace = true
futures = { workspace = true, features = ["std"] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt"] }
