[package]
name = "coco-goal-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-goals.workspace = true
coco-types.workspace = true
coco-error.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
