[package]
name = "coco-workflow-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-error.workspace = true
coco-stack-trace-macro.workspace = true
coco-types.workspace = true
rquickjs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time", "sync"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "sync"] }
