[package]
name = "coco-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-error.workspace = true
coco-stack-trace-macro.workspace = true
coco-utils-common.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
