[package]
name = "coco-exec-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio", "ws"] }
base64 = { workspace = true }
bytes = { workspace = true }
coco-config = { workspace = true }
coco-utils-absolute-path = { workspace = true }
coco-utils-path-uri = { workspace = true }
coco-utils-pty = { workspace = true }
coco-utils-rustls-provider = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
http = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = { workspace = true, features = ["io", "rt"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
