[package]
name = "coco-hub-connector"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coco_hub_connector"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
coco-error.workspace = true
coco-hub-protocol.workspace = true
coco-types.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
