[package]
name = "coco-session-trace"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-error.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
