[package]
name = "coco-test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.clippy]
unwrap_used = "allow"  # test-only crate, unwrap/expect is fine

[dependencies]
coco-types.workspace = true
coco-llm-types.workspace = true
coco-messages.workspace = true
coco-compact.workspace = true
coco-inference.workspace = true
coco-tool-runtime.workspace = true
coco-utils-json-repair.workspace = true
# Real built-in tool impls (Bash/Read/Write/Edit/Glob/Grep) for ToolRegistryBuilder.
coco-tools.workspace = true

async-trait.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["sync"] }
# Volatile-field normalization for golden snapshots (timestamps / uuids / temp paths).
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
