[package]
name = "coco-paths"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
unicode-normalization = { workspace = true }

[dev-dependencies]
coco-utils-common = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
