[package]
name = "coco-utils-path-uri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
coco-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[lib]
doctest = false
