[package]
name = "vercel-ai-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anthropic provider for Vercel AI SDK in Rust"

[dependencies]
vercel-ai-provider.workspace = true
vercel-ai-provider-utils.workspace = true
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
insta = { workspace = true, features = ["json"] }
# Cassette record/replay demo. coco-cassette has no vercel-ai dependency, so
# this dev-dep introduces no cycle and trips no seam guard.
coco-cassette = { workspace = true }

[lints]
workspace = true
