[package]
name = "vercel-ai-groq"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Groq provider for Vercel AI SDK in Rust"

[dependencies]
vercel-ai-provider.workspace = true
vercel-ai-provider-utils.workspace = true
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
chrono = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
